--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio: ^5.3.3
+  cookie_jar: ^4.0.7
+  dio_cookie_manager: ^3.0.0
+  another_flushbar: ^1.12.30
+  qr_code_scanner_plus: ^2.0.10+1
+  google_sign_in: ^6.3.0  
+  flutter_secure_storage: ^9.0.0
+  table_calendar: ^3.0.8
+  intl: ^0.17.0
+  numberpicker: ^2.1.2
+  flutter_dotenv: ^5.2.1
+  fl_chart: ^0.69.0
+  # syncfusion_flutter_calendar: ^24.1.41
+
 
 dev_dependencies:
   
@@ -48,6 +62,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_native_splash: ^2.3.2  # Or latest version
   http: ^0.13.6
+  flutter_spinkit: ^5.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -63,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - .env
 
 
 flutter_native_splash:
