flutter notofication added - tested ok

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-API_URL=https://iron-board.onrender.com
+# API_URL=https://iron-board.onrender.com
+API_URL=https://045dceda821a.ngrok-free.app
+CASHFREE_APP_ID=TEST10610819dba5002a03c6aca8358191801601
+CASHFREE_SECRET_KEY=cfsk_ma_test_e4e237b4ffe10c1921903ceaa995fef0_338e8a4e
