--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,15 @@ dependencies:
   numberpicker: ^2.1.2
   flutter_dotenv: ^5.2.1
   fl_chart: ^0.69.0
+  flutter_cashfree_pg_sdk: ^2.2.9+47
+  http: ^1.1.0
+  firebase_messaging: ^16.0.0
+  firebase_core: ^4.0.0
+  flutter_local_notifications: ^17.2.3
+  firebase_analytics: ^12.0.0
   # syncfusion_flutter_calendar: ^24.1.41
 
-
 dev_dependencies:
-  
   flutter_test:
     sdk: flutter
 
@@ -61,9 +65,13 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_native_splash: ^2.3.2  # Or latest version
-  http: ^0.13.6
   flutter_spinkit: ^5.2.0
+  flutter_launcher_icons: ^0.13.1
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -78,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/app_icon.png
     - .env
 
 
